# outputSwagger.json
@@ -327,6 +327,16 @@
           }
         }
       }
+    },
+    "/login/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   }
 }
